favicon and meta img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <meta property="og:description"
         content="Authentic NYC-style pizza in the heart of Chelsea, Quebec. Food by Paco. Art by Loogart.">
     <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="https://dabronx.pizza/img/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -45,7 +45,7 @@
     <meta property="twitter:description"
         content="Authentic NYC-style pizza in the heart of Chelsea, Quebec. Food by Paco. Art by Loogart.">
     <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="https://dabronx.pizza/img/og-image.jpg">
 </head>
 
 <body>
@@ -121,7 +121,7 @@
                                 <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                                     <div class="w-75">
                                         <h2>Supreme Leader</h2>
-                                        <p>Marinara sauce, oregano, kalamata olives, artichokes, roaster pepper, ricotta, mozzarella, portobellos</p>
+                                        <p>Marinara sauce, oregano, kalamata olives, artichokes, roasted pepper, ricotta, mozzarella, portobellos</p>
                                         <p class="fw-bold">+ ADD Basil</p>
                                     </div>
                                     <span class="h2">$22</span>
