--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                 <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                                     <div class="w-75">
                                         <h2>Cheezilla</h2>
-                                        <p>Tomato sauce, mozarella, more mozzarella</p>
+                                        <p>Tomato sauce, mozzarella, more mozzarella</p>
                                         <p class="fw-bold">+ ADD Basil</p>
                                     </div>
                                     <span class="h2">$19</span>
@@ -91,7 +91,7 @@
                                 <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                                     <div class="w-75">
                                         <h2>Pepe & Roni</h2>
-                                        <p>Tomato sauce, mozarella, artisan pepperoni</p>
+                                        <p>Tomato sauce, mozzarella, artisan pepperoni</p>
                                         <p class="fw-bold">+ ADD Basil</p>
                                     </div>
                                     <span class="h2">$21</span>
@@ -111,7 +111,7 @@
                                 <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                                     <div class="w-75">
                                         <h2>Don Alfredo</h2>
-                                        <p>Alfredo sauce, mozarella, asiago, ricotta, parmesan, lemon zest</p>
+                                        <p>Alfredo sauce, mozzarella, asiago, ricotta, parmesan, lemon zest</p>
                                         <p class="fw-bold">+ ADD Musrooms, + ADD Arugula, + ADD Truffle Oil</p>
                                     </div>
                                     <span class="h2">$23</span>
