updated mobile header layout

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <nav>
                     <div class="row justify-content-center mb-5">
-                        <div class="col-lg-5 text-center">
+                        <div class="col-md-6 text-center">
                             <p class="fw-bold fs-5">Authentic NYC-style pizza in the heart of Chelsea, Quebec.</p>
                             <div class="mt-4">
                             <a class="btn btn-lg btn-outline-dark border-4 fw-bold me-2" href="#menu" role="button">Menu</a>
