fix menu padding

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <meta property="og:title" content="Dabronx Pizza Co.">
     <meta property="og:description"
         content="Authentic NYC-style pizza in the heart of Chelsea, Quebec. Food by Paco. Art by Loogart.">
-    <meta property="og:image"
-        content="https://dabronx.pizza/img/og-image.jpg">
+    <meta property="og:image" content="https://dabronx.pizza/img/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -44,15 +43,14 @@
     <meta property="twitter:title" content="Dabronx Pizza Co.">
     <meta property="twitter:description"
         content="Authentic NYC-style pizza in the heart of Chelsea, Quebec. Food by Paco. Art by Loogart.">
-    <meta property="twitter:image"
-        content="https://dabronx.pizza/img/og-image.jpg">
+    <meta property="twitter:image" content="https://dabronx.pizza/img/og-image.jpg">
 </head>
 
 <body>
 
     <div class="d-block d-md-none mb-3">
         <div class="mobile-header-img"></div>
-    </div>  
+    </div>
 
     <div class="container">
         <div class="row justify-content-center">
@@ -62,96 +60,96 @@
                     <img src="./img/dabronx-logo.svg" class="img-fluid" alt="">
                 </div>
 
-                <nav>
-                    <div class="row justify-content-center mb-5">
-                        <div class="col-md-6 text-center">
-                            <p class="fw-bold fs-5">Authentic NYC-style pizza in the heart of Chelsea, Quebec.</p>
-                            <div class="mt-4">
-                            <a class="btn btn-lg btn-outline-dark border-4 fw-bold me-2" href="#menu" role="button">Menu</a>
+                <nav class="row justify-content-center mb-5">
+                    <div class="col-md-6 text-center">
+                        <p class="fw-bold fs-5">Authentic NYC-style pizza in the heart of Chelsea, Quebec.</p>
+                        <div class="mt-4">
+                            <a class="btn btn-lg btn-outline-dark border-4 fw-bold me-2" href="#menu"
+                                role="button">Menu</a>
                             <a class="btn btn-lg btn-dark border-4 fw-bold" href="#order" role="button">Order</a>
-                        </div>
                         </div>
                     </div>
                 </nav>
 
-                <section id="menu">
-                    <div class="row">
-                        <div class="row justify-content-between">
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>Cheezilla</h2>
-                                        <p>Tomato sauce, mozzarella, more mozzarella</p>
-                                        <p class="fw-bold">+ ADD Basil</p>
-                                    </div>
-                                    <span class="h2">$19</span>
-                                </div>
+                <section class="row justify-content-between" id="menu">
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>Cheezilla</h2>
+                                <p>Tomato sauce, mozzarella, more mozzarella</p>
+                                <p class="fw-bold">+ ADD Basil</p>
                             </div>
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>Pepe & Roni</h2>
-                                        <p>Tomato sauce, mozzarella, artisan pepperoni</p>
-                                        <p class="fw-bold">+ ADD Basil</p>
-                                    </div>
-                                    <span class="h2">$21</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>All Drizzy</h2>
-                                        <p>Vodka sauce, mozzarella, artisan bacon, pepperoni, sausage</p>
-                                        <p class="fw-bold">+ ADD Mushrooms</p>
-                                    </div>
-                                    <span class="h2">$24</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>Don Alfredo</h2>
-                                        <p>Alfredo sauce, mozzarella, asiago, ricotta, parmesan, lemon zest</p>
-                                        <p class="fw-bold">+ ADD Musrooms, + ADD Arugula, + ADD Truffle Oil</p>
-                                    </div>
-                                    <span class="h2">$23</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>Supreme Leader</h2>
-                                        <p>Marinara sauce, oregano, kalamata olives, artichokes, roasted pepper, ricotta, mozzarella, portobellos</p>
-                                        <p class="fw-bold">+ ADD Basil</p>
-                                    </div>
-                                    <span class="h2">$22</span>
-                                </div>
-                            </div>
-                            <div class="col-lg-6 px-lg-4">
-                                <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                                    <div class="w-75">
-                                        <h2>Hawaii Five-Oh-MG</h2>
-                                        <p>Sesame crust, tomato sauce, mozzarella, fresh pineapple</p>
-                                        <p class="fw-bold">+ ADD Pickled Jalapeños</p>
-                                    </div>
-                                    <span class="h2">$23</span>
-                                </div>
-                            </div>
-
+                            <span class="h2">$19</span>
                         </div>
-            
                     </div>
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>Pepe & Roni</h2>
+                                <p>Tomato sauce, mozzarella, artisan pepperoni</p>
+                                <p class="fw-bold">+ ADD Basil</p>
+                            </div>
+                            <span class="h2">$21</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>All Drizzy</h2>
+                                <p>Vodka sauce, mozzarella, artisan bacon, pepperoni, sausage</p>
+                                <p class="fw-bold">+ ADD Mushrooms</p>
+                            </div>
+                            <span class="h2">$24</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>Don Alfredo</h2>
+                                <p>Alfredo sauce, mozzarella, asiago, ricotta, parmesan, lemon zest</p>
+                                <p class="fw-bold">+ ADD Musrooms, + ADD Arugula, + ADD Truffle Oil</p>
+                            </div>
+                            <span class="h2">$23</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>Supreme Leader</h2>
+                                <p>Marinara sauce, oregano, kalamata olives, artichokes, roasted pepper, ricotta,
+                                    mozzarella, portobellos</p>
+                                <p class="fw-bold">+ ADD Basil</p>
+                            </div>
+                            <span class="h2">$22</span>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 px-lg-4">
+                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+                            <div class="w-75">
+                                <h2>Hawaii Five-Oh-MG</h2>
+                                <p>Sesame crust, tomato sauce, mozzarella, fresh pineapple</p>
+                                <p class="fw-bold">+ ADD Pickled Jalapeños</p>
+                            </div>
+                            <span class="h2">$23</span>
+                        </div>
+                    </div>
+
+
                 </section>
 
                 <section class="py-5" id="order">
                     <div class="row justify-content-center mb-5">
                         <div class="col-lg-7 text-center">
                             <h2>Order</h2>
-                            <p>All pizzas available for pickup on at<br> <a class="text-dark" href="https://goo.gl/maps/qsPAzW5o6F6Rh1S27" target="_blank"> 152 Chem. Old Chelsea, Chelsea</a> every Friday from 12-3 p.m.</p>
-                            <a class="btn btn-lg btn-dark border-4 fw-bold my-2" href="sms://18192306745" role="button">Text your order</a>
+                            <p>All pizzas available for pickup on at<br> <a class="text-dark"
+                                    href="https://goo.gl/maps/qsPAzW5o6F6Rh1S27" target="_blank"> 152 Chem. Old Chelsea,
+                                    Chelsea</a> every Friday from 12-3 p.m.</p>
+                            <a class="btn btn-lg btn-dark border-4 fw-bold my-2" href="sms://18192306745"
+                                role="button">Text your order</a>
                         </div>
                     </div>
-                    <img src="./img/footer-artwork.png" class="d-none d-lg-block w-100" alt="" style="margin-top:-120px">                    
+                    <img src="./img/footer-artwork.png" class="d-none d-lg-block w-100" alt=""
+                        style="margin-top:-120px">
                 </section>
 
 
@@ -164,7 +162,8 @@
             <div class="row justify-content-center text-center">
                 <div class="col-lg-8">
                     <img src="./img/dabronx-logo-white.svg" alt="" class="mb-4" style="max-width: 221px;">
-                    <span class="d-block">© 2022 Dabronx Pizza Co. Food by Paco. Art by <a href="https://loogart.com" target="_blank" class="text-light"> Loogart</a>.</span>
+                    <span class="d-block">© 2022 Dabronx Pizza Co. Food by Paco. Art by <a href="https://loogart.com"
+                            target="_blank" class="text-light"> Loogart</a>.</span>
                 </div>
             </div>
         </div>
