--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-9">
+            <div class="col-lg-7"><!--<div class="col-lg-9">-->
                 <img src="./img/header.png" alt="" class="d-none d-md-block w-100 mx-auto" style="margin-bottom:-21px">
                 <div class="p-3 d-block d-md-none mb-2">
                     <img src="./img/dabronx-logo.svg" class="img-fluid" alt="">
@@ -72,7 +72,8 @@
                 </nav>
 
                 <section class="row justify-content-between" id="menu">
-                    <div class="col-lg-6 px-lg-4">
+                    <!-- <div class="col-lg-6 px-lg-4"> -->
+                        <div class="col-lg-12">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>Cheezilla</h2>
@@ -82,7 +83,7 @@
                             <span class="h2">$19</span>
                         </div>
                     </div>
-                    <div class="col-lg-6 px-lg-4">
+                    <div class="col-lg-12">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>Pepe & Roni</h2>
@@ -92,7 +93,7 @@
                             <span class="h2">$21</span>
                         </div>
                     </div>
-                    <div class="col-lg-6 px-lg-4">
+                    <!-- <div class="col-lg-6 px-lg-4">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>All Drizzy</h2>
@@ -101,8 +102,8 @@
                             </div>
                             <span class="h2">$24</span>
                         </div>
-                    </div>
-                    <div class="col-lg-6 px-lg-4">
+                    </div> -->
+                    <div class="col-lg-12">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>Don Alfredo</h2>
@@ -112,7 +113,7 @@
                             <span class="h2">$23</span>
                         </div>
                     </div>
-                    <div class="col-lg-6 px-lg-4">
+                    <!-- <div class="col-lg-6 px-lg-4">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>Supreme Leader</h2>
@@ -122,8 +123,8 @@
                             </div>
                             <span class="h2">$22</span>
                         </div>
-                    </div>
-                    <div class="col-lg-6 px-lg-4">
+                    </div> -->
+                    <!-- <div class="col-lg-6 px-lg-4">
                         <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
                             <div class="w-75">
                                 <h2>Hawaii Five-Oh-MG</h2>
@@ -132,7 +133,7 @@
                             </div>
                             <span class="h2">$23</span>
                         </div>
-                    </div>
+                    </div> -->
 
 
                 </section>
