--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-7"><!--<div class="col-lg-9">-->
+            <section class="col-lg-7"><!--<div class="col-lg-9">-->
                 <img src="./img/header.png" alt="" class="d-none d-md-block w-100 mx-auto" style="margin-bottom:-21px">
                 <div class="p-3 d-block d-md-none mb-2">
                     <img src="./img/dabronx-logo.svg" class="img-fluid" alt="">
-                </div>
-
+                </div>            
                 <nav class="row justify-content-center mb-5">
                     <div class="col-md-6 text-center">
+                        <h1 class="visually-hidden">Dabronx Pizza</h1>
                         <p class="fw-bold fs-5">Authentic NYC-style pizza in the heart of Chelsea, Quebec.</p>
                         <div class="mt-4">
                             <a class="btn btn-lg btn-outline-dark border-4 fw-bold me-2" href="#menu"
@@ -70,91 +70,91 @@
                         </div>
                     </div>
                 </nav>
+            </section>
 
-                <section class="row justify-content-between" id="menu">
-                    <!-- <div class="col-lg-6 px-lg-4"> -->
-                        <div class="col-lg-12">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+            <!-- MENU -->
+            <section class="row justify-content-between" id="menu">
+                <div class="col-lg-6">
+                    <div class="border border-dark border-4 rounded-3 p-3 p-lg-4 mb-3 shadow">
+                        <h2 class="fs-1 d-block b-3">18" Pizzas</h2>
+                        <div class="d-flex justify-content-between py-3 mb-3 border-bottom-dotted border-dark border-3">
                             <div class="w-75">
-                                <h2>Cheezilla</h2>
-                                <p>Tomato sauce, mozzarella, more mozzarella</p>
-                                <p class="fw-bold">+ ADD Basil</p>
+                                <h3 class="fs-3">Cheezilla</h3>
+                                <p>Tomato sauce or White sauce, <i>Remixed</i> Mozzarella, asiago, parmesan</p>
+                                <p class="small">+ ADD Musrooms, + ADD Garlic Oil, + ADD White Truffle Oil</p>
                             </div>
-                            <span class="h2">$19</span>
+                            <span class="h2 fs-3">$20</span>
+                        </div>
+                    
+                        <div class="d-flex justify-content-between py-3 mb-3 border-bottom-dotted border-dark border-3">
+                            <div class="w-75">
+                                <h3 class="fs-3">Pepe & Roni</h3>
+                                <p>Tomato sauce, <i>Remixed</i> Mozzarella, Basil, Pepperoni</p>
+                                <p class="small">+ ADD Spicy Pepperoni, + ADD Basil, + ADD Hot Honey</p>
+                            </div>
+                            <span class="h2 fs-3">$21</span>
+                        </div>
+                    
+                        <div class="d-flex justify-content-between py-3">
+                            <div class="w-75">
+                                <h3 class="fs-3">Queen Maggie</h3>
+                                <p>Tomato Sauce, <i>Remixed</i> Mozzarella, Basil, Olive Oil</p>
+                            </div>
+                            <span class="h2 fs-3">$19</span>
                         </div>
                     </div>
-                    <div class="col-lg-12">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                            <div class="w-75">
-                                <h2>Pepe & Roni</h2>
-                                <p>Tomato sauce, mozzarella, artisan pepperoni</p>
-                                <p class="fw-bold">+ ADD Basil</p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="border border-dark border-4 rounded-3 p-3 p-lg-4 mb-3 shadow">
+                        <h2 class="fs-1 d-block mb-3">Salads</h2>
+                        <div class="d-flex justify-content-between py-3">
+                            <div class="w-50">
+                                <h3 class="fs-3">Hail Caesar</h3>                            
                             </div>
-                            <span class="h2">$21</span>
+                            <span class="h2 fs-3">$3.95 / 6.95</span>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-6 px-lg-4">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+
+                    <div class="border border-dark border-4 rounded-3 p-3 p-lg-4 mb-3 shadow">
+                        <h2 class="fs-1 d-block mb-3">Deserts</h2>
+                        <div class="d-flex justify-content-between py-3">
                             <div class="w-75">
-                                <h2>All Drizzy</h2>
-                                <p>Vodka sauce, mozzarella, artisan bacon, pepperoni, sausage</p>
-                                <p class="fw-bold">+ ADD Mushrooms</p>
+                                <h3 class="fs-3">New York Cheesecake</h3>
+                                <p>Strawberry, Pistachio, Lemon Meringue or Brownie & Caramel</p>                            
                             </div>
-                            <span class="h2">$24</span>
-                        </div>
-                    </div> -->
-                    <div class="col-lg-12">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                            <div class="w-75">
-                                <h2>Don Alfredo</h2>
-                                <p>Alfredo sauce, mozzarella, asiago, ricotta, parmesan, lemon zest</p>
-                                <p class="fw-bold">+ ADD Musrooms, + ADD Arugula, + ADD Truffle Oil</p>
-                            </div>
-                            <span class="h2">$23</span>
+                            <span class="h2 fs-3">$5.95</span>
                         </div>
                     </div>
-                    <!-- <div class="col-lg-6 px-lg-4">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
+
+                    <div class="border border-dark border-4 rounded-3 p-3 p-lg-4 shadow">
+                        <h2 class="fs-1 d-block mb-3">Beverages</h2>
+                        <div class="d-flex justify-content-between py-3">
                             <div class="w-75">
-                                <h2>Supreme Leader</h2>
-                                <p>Marinara sauce, oregano, kalamata olives, artichokes, roasted pepper, ricotta,
-                                    mozzarella, portobellos</p>
-                                <p class="fw-bold">+ ADD Basil</p>
+                                <h3 class="fs-3">Craft Soda</h3>
+                                <p>Coming soon.</p>                   
                             </div>
-                            <span class="h2">$22</span>
-                        </div>
-                    </div> -->
-                    <!-- <div class="col-lg-6 px-lg-4">
-                        <div class="d-flex justify-content-between border-bottom border-dark border-3 py-3 mb-3">
-                            <div class="w-75">
-                                <h2>Hawaii Five-Oh-MG</h2>
-                                <p>Sesame crust, tomato sauce, mozzarella, fresh pineapple</p>
-                                <p class="fw-bold">+ ADD Pickled Jalapeños</p>
-                            </div>
-                            <span class="h2">$23</span>
-                        </div>
-                    </div> -->
-
-
-                </section>
-
-                <section class="py-5" id="order">
-                    <div class="row justify-content-center mb-5">
-                        <div class="col-lg-7 text-center">
-                            <h2>Order</h2>
-                            <p>All pizzas available for pickup on at<br> <a class="text-dark"
-                                    href="https://goo.gl/maps/qsPAzW5o6F6Rh1S27" target="_blank"> 152 Chem. Old Chelsea,
-                                    Chelsea</a> every Friday from 12-3 p.m.</p>
-                            <a class="btn btn-lg btn-dark border-4 fw-bold my-2" href="sms://18192306745"
-                                role="button">Text your order</a>
+                            <span class="h2 fs-3"></span>
                         </div>
                     </div>
-                    <img src="./img/footer-artwork.png" class="d-none d-lg-block w-100" alt=""
-                        style="margin-top:-120px">
-                </section>
+                </div>
 
+            </section>
 
-            </div>
+            <section class="col-lg-7 py-5" id="order">
+                <div class="row justify-content-center mb-5">
+                    <div class="col-lg-7 text-center">
+                        <h2>Order</h2>
+                        <p>All pizzas available for pickup on at<br> <a class="text-dark"
+                                href="https://goo.gl/maps/qsPAzW5o6F6Rh1S27" target="_blank"> 152 Chem. Old Chelsea,
+                                Chelsea</a> every Friday from 12-3 p.m.</p>
+                        <a class="btn btn-lg btn-dark border-4 fw-bold my-2" href="sms://18192306745"
+                            role="button">Text your order</a>
+                    </div>
+                </div>
+                <img src="./img/footer-artwork.png" class="d-none d-lg-block w-100" alt=""
+                    style="margin-top:-120px">
+            </section>
+
         </div>
     </div>
 
